# HYAKKI

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
docs/: 00-VISION.md  01-FICTION.md  02-CORE-LOOP.md  03-COMBAT-MATH.md  04-CLASSES.md  05-PROGRESSION.md  06-RELICS.md  07-ENEMIES.md  08-DESCENTS.md  09-ART-DIRECTION.md  10-UI-UX.md  11-ARCHITECTURE.md  12-ROADMAP.md  13-CONTENT-TABLES.md  14-NARRATIVE.md  ROADMAP-bestiary-and-biomes.md
docs/hyakki/: 00-THE-TURNING.md  01-LORE.md  02-GLOSSARY.md  03-CONTENT.md  04-HORROR.md  05-DESKTOP.md  06-ROADMAP.md
scripts/: balance.ts  descent.ts  fix-encoding.mjs  interment.ts  make-icons.mjs  myriad.ts  offline.ts  prestige.ts  render-showcase.ts
src/: format.ts  main.tsx  styles-combat.css  styles-figures.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/audio/: engine.ts  music.ts
src/content/: abilities.ts  achievements.ts  balance.ts  classes.ts  fragments.ts  ichor.ts  items.ts  kegare.ts  layers.ts  names.ts  nameshop.ts  ofuda.ts  relics.ts  tree.ts  upgrades.ts  vows.ts  wardens.ts  worldStage.ts
src/i18n/: index.ts  strings.ts
src/loop/: useGameLoop.ts
src/pixel/: engine.ts  species.ts  walker.ts  yokai.ts
src/render/: figure.ts  presets.ts  sigil.ts
src/save/: desktop.ts  serialize.ts  storage.ts
src/sim/: combat.ts  descent.ts  enemies.ts  evaluate.ts  formulas.ts  ghosts.ts  myriad.ts  offline.ts  prestige.ts  relics.ts  rng.ts  sim.test.ts  state.ts  stats.ts  types.ts
(+31 files in other folders)
