[package]
name = "hyakki"
version = "0.1.0"
description = "A hundred demons. Which is to say: too many to count."
authors = ["SenseiIssei"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-start-dragging", "window-close", "window-minimize", "window-maximize", "window-hide", "window-show", "window-unmaximize", "system-tray", "shell-open", "dialog-message"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
